[gd_scene load_steps=58 format=3 uid="uid://b4rygeubjoucd"]

[ext_resource type="Texture2D" uid="uid://x7jhdlle0q1" path="res://assets/inimigosprite/Idle.png" id="1_4k6i2"]
[ext_resource type="Script" uid="uid://cubmp6h3h558g" path="res://inimigos/robo.gd" id="1_dk61p"]
[ext_resource type="Texture2D" uid="uid://bfeqv7d4e338m" path="res://assets/inimigosprite/Attack_1.png" id="1_l5xij"]
[ext_resource type="Texture2D" uid="uid://cwfuoem7u71e" path="res://assets/inimigosprite/Enabling.png" id="2_juh6q"]
[ext_resource type="Texture2D" uid="uid://dpgkvwyoobho7" path="res://assets/inimigosprite/Dead.png" id="2_yrybl"]
[ext_resource type="Texture2D" uid="uid://c47u20qk5x7yu" path="res://assets/inimigosprite/Walk.png" id="6_dk61p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rt34a"]
size = Vector2(11, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrybl"]
atlas = ExtResource("1_l5xij")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg3is"]
atlas = ExtResource("1_l5xij")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbxga"]
atlas = ExtResource("1_l5xij")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8unn"]
atlas = ExtResource("1_l5xij")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ahno"]
atlas = ExtResource("1_l5xij")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsa3o"]
atlas = ExtResource("1_l5xij")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5ahb"]
atlas = ExtResource("1_l5xij")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgo4o"]
atlas = ExtResource("1_l5xij")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8w43"]
atlas = ExtResource("1_l5xij")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_exesr"]
atlas = ExtResource("1_l5xij")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h15h"]
atlas = ExtResource("1_l5xij")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_viw4y"]
atlas = ExtResource("1_l5xij")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f41u"]
atlas = ExtResource("1_l5xij")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mw0w5"]
atlas = ExtResource("1_l5xij")
region = Rect2(1664, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyi45"]
atlas = ExtResource("1_l5xij")
region = Rect2(1792, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o81gt"]
atlas = ExtResource("1_l5xij")
region = Rect2(1920, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sejj"]
atlas = ExtResource("1_l5xij")
region = Rect2(2048, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yewgl"]
atlas = ExtResource("2_yrybl")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_24lli"]
atlas = ExtResource("2_yrybl")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7rwu"]
atlas = ExtResource("2_yrybl")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwcrg"]
atlas = ExtResource("2_yrybl")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5anm"]
atlas = ExtResource("2_yrybl")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3owk7"]
atlas = ExtResource("2_juh6q")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yym00"]
atlas = ExtResource("2_juh6q")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqlug"]
atlas = ExtResource("2_juh6q")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_453pv"]
atlas = ExtResource("2_juh6q")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b25s1"]
atlas = ExtResource("2_juh6q")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c5qh"]
atlas = ExtResource("2_juh6q")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1felg"]
atlas = ExtResource("1_4k6i2")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_64ic7"]
atlas = ExtResource("1_4k6i2")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpd8m"]
atlas = ExtResource("1_4k6i2")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yiigf"]
atlas = ExtResource("1_4k6i2")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6e5q"]
atlas = ExtResource("1_4k6i2")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhbfi"]
atlas = ExtResource("1_4k6i2")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk61p"]
atlas = ExtResource("6_dk61p")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajwxl"]
atlas = ExtResource("6_dk61p")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmydb"]
atlas = ExtResource("6_dk61p")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_av304"]
atlas = ExtResource("6_dk61p")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilpfa"]
atlas = ExtResource("6_dk61p")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_otao4"]
atlas = ExtResource("6_dk61p")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt34a"]
atlas = ExtResource("6_dk61p")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_poqbb"]
atlas = ExtResource("6_dk61p")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8ibe"]
atlas = ExtResource("6_dk61p")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2bnq"]
atlas = ExtResource("6_dk61p")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gbm3"]
atlas = ExtResource("6_dk61p")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_87u1s"]
atlas = ExtResource("6_dk61p")
region = Rect2(640, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_yewgl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrybl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg3is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbxga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8unn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ahno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsa3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5ahb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgo4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8w43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exesr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h15h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_viw4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f41u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mw0w5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyi45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o81gt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sejj")
}],
"loop": true,
"name": &"attack",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yewgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24lli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7rwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwcrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5anm")
}],
"loop": true,
"name": &"dead",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3owk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yym00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqlug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_453pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b25s1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c5qh")
}],
"loop": true,
"name": &"enabling",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1felg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64ic7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpd8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yiigf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6e5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhbfi")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk61p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajwxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmydb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_av304")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilpfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otao4")
}],
"loop": true,
"name": &"run",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt34a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_poqbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8ibe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2bnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gbm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87u1s")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dk61p"]
radius = 214.0
height = 634.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dk61p"]
size = Vector2(30, 75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_poqbb"]
size = Vector2(23, 5)

[node name="inimigo" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_dk61p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 29)
shape = SubResource("RectangleShape2D_rt34a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(70, 9)
sprite_frames = SubResource("SpriteFrames_yewgl")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.11370352

[node name="detector" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
position = Vector2(267, 64)
shape = SubResource("CapsuleShape2D_dk61p")

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(0, 26)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(246, 14)
shape = SubResource("RectangleShape2D_dk61p")
debug_color = Color(0.82640207, 0.30638131, 0.6483418, 0.41960785)

[node name="Cabeca" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cabeca"]
position = Vector2(258, 0)
shape = SubResource("RectangleShape2D_poqbb")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(29, 79)

[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="detector" to="." method="_on_detector_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="Cabeca" to="." method="_on_cabeca_body_entered"]
